fix video-heading smaller font size on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,7 +343,7 @@ footer {
 /* videos gallery */
 .videos-heading {
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 20px 10px;
   letter-spacing: 1.2px;
 }
@@ -648,6 +648,10 @@ input, input::placeholder, textarea {
     .article-text {
       font-size: 1.4rem;
       line-height: 2rem;
+    }
+
+    .videos-heading {
+      font-size: 2rem;
     }
 
     .videos {
